<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- =====================================================
         SPRING BOOT
         ===================================================== -->

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/>
    </parent>


    <!-- =====================================================
         PROJECT INFORMATION
         ===================================================== -->

    <groupId>com.newsportal</groupId>
    <artifactId>newsportal</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>newsportal</name>
    <description>News Portal using Spring Boot and JPA</description>


    <!-- =====================================================
         JAVA
         ===================================================== -->

    <properties>
        <java.version>21</java.version>
    </properties>


    <!-- =====================================================
         DEPENDENCIES
         ===================================================== -->

    <dependencies>

        <!-- =================================================
             SPRING WEB / MVC
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>


        <!-- =================================================
             THYMELEAF
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>


        <!-- =================================================
             SPRING SECURITY
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>


        <!-- =================================================
             OAUTH2 LOGIN
             Google + GitHub
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-client</artifactId>
        </dependency>


        <!-- =================================================
             SPRING DATA JPA
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>


        <!-- =================================================
             MYSQL
             ================================================= -->

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>


        <!-- =================================================
             WEBFLUX
             Required for WebClient
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>


        <!-- =================================================
             VALIDATION
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>


        <!-- =================================================
             THYMELEAF SPRING SECURITY
             ================================================= -->

        <dependency>
            <groupId>org.thymeleaf.extras</groupId>
            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
        </dependency>


        <!-- =================================================
             EMAIL
             Gmail SMTP / JavaMailSender
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>


        <!-- =================================================
             SWAGGER / OPENAPI
             ================================================= -->

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.9</version>
        </dependency>


        <!-- =================================================
             DEVTOOLS
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <optional>true</optional>
        </dependency>


        <!-- =================================================
             LOMBOK
             ================================================= -->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>


        <!-- =================================================
             TESTING
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>


    <!-- =====================================================
         BUILD
         ===================================================== -->

    <build>

        <!-- =================================================
             RESOURCE PACKAGING
             =================================================

             Only standard Spring Boot resources are packaged.

             News images are NOT stored locally.

             Image URLs are stored in the database and rendered
             directly by the browser.

             ================================================= -->

        <resources>

            <resource>
                <directory>src/main/resources</directory>
            </resource>

        </resources>


        <!-- =================================================
             SPRING BOOT MAVEN PLUGIN
             ================================================= -->

        <plugins>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

        </plugins>

    </build>

</project>